# fgc-scoreboard

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PRODUCT.md  README.md  controller.html  package-lock.json  package.json  server.py  start-tunnel.sh
.github/workflows/: pages.yml  release.yml  server-build.yml
.railway/: README.md  railway.ts
_overlays/: scoreboard.html  scoreboard.xml
_overlays/css/: style.css  style.css.map  style.scss
_overlays/js/: scoreboard.js
deploy/: railway.md
docs/: release-signing.pub.asc  signing.md
docs/brainstorms/: 2026-03-13-controller-redesign-brainstorm.md  2026-03-13-lan-local-server-brainstorm.md  2026-03-13-local-fallback-brainstorm.md  2026-03-13-overlay-neo-brutalist-brainstorm.md  2026-03-13-remote-scoreboard-brainstorm.md  2026-03-16-overlay-alignment-brainstorm.md
docs/plans/: 2026-03-13-feat-controller-neo-brutalist-redesign-plan.md  2026-03-13-feat-lan-local-python-server-plan.md  2026-03-13-feat-local-storage-fallback-plan.md  2026-03-13-feat-overlay-neo-brutalist-reskin-plan.md  2026-03-13-feat-remote-scoreboard-controller-plan.md  2026-03-16-fix-overlay-alignment-plan.md  rust-server-rewrite.md
scripts/: server-parity-test.sh  setup-release-signing.sh  start-tunnel.sh  start.sh
server/: Cargo.toml
server/src/: auth.rs  config.rs  logging.rs  main.rs  rate_limit.rs  state.rs
server/src/routes/: health.rs  mod.rs  scoreboard.rs
server/src/tunnel/: client.rs  mod.rs
web/: index.html
web/css/: controller.css
web/overlay/: counters.html
web/overlay/css/: counters.css  style.css  (+3 more)
(+4 files in other folders)
